     Bootstrap class that finds all the plug-in jar files and installs an
     alternate class loader that will load classes from them.

  2. Custom OutputHandler classes should also be placed in one of the
     plug-in directories, so that curn can find them. Simply adding them to
     the CLASSPATH won't work any more.

- Converted some base curn functionality into (built-in) plug-ins.

- The "EditItemURL" feed configuration parameter may now be specified multiple
  times within a feed, provided each instance has its own unique suffix (e.g.,
  "EditItemURL1", "EditItemURL2", "EditItemURLFoo", etc.)

- curn now supports a per-feed "EditFeedURL" configuration parameter. Like
  "EditItemURL", this parameter may be be specified multiple times within a
  feed, provided each instance has its own unique suffix. "EditFeedURL" can
  be used to edit the feed's URL, as opposed to the URLs of the individual
  items within a feed.

- The "ShowDates" global configuration value (in the [curn]) section can
  now be overridden on a per-feed basis, by a feed-specific "ShowDates"
  configuration parameter.

- Added a new per-feed configuration item, "ArticleFilter", that permits
  filtering out feed items based on their content. See the User's Guide
  for details. (This capability is handled by a stock curn plug-in.)

- Added a new configuration item, "CommonXMLFixups". If enabled for a feed
  (or globally, for all feeds), curn will edit downloaded XML, before
  parsing it, to attempt to fix some of the more common XML syntax
  problems.

- curn's ScriptOutputHandler class now exports curn-related data to the
  script via a global "curn" object that does not have to be retrieved via
  bsf.lookupBean(). (i.e., The "curn" object is global to the script.) For
  backward compatibility with previously written scripts, the data is also
  available via the old beans, but new scripts should use the new "curn"
  script global.
